manage simply fix bg color contrast

--- a/src/style/components/_content.scss
+++ b/src/style/components/_content.scss
@@ -19,14 +19,14 @@
         .text--illustration--container {
             .content--text--container {
                 .content--link {
-                    background: rgb(73,110,253);
+                    background: #3F65FD;
                     color: #fff;
                 }
             }
         }
 
         .content--testimonial--container {
-            background: rgb(73,110,253);
+            background: #3F65FD;
             color: #fff;
         }
     }
@@ -253,7 +253,7 @@
             .text--illustration--container {
                 .content--text--container {
                     .content--link {
-                        background: rgb(73,110,253);
+                        background: #3F65FD;
                         color: #fff;
                         transition: .2s;
 
@@ -266,7 +266,7 @@
             }
     
             .content--testimonial--container {
-                background: rgb(73,110,253);
+                background: #3F65FD;
                 color: #fff;
             }
         }
