--- a/src/style/general.css
+++ b/src/style/general.css
@@ -644,11 +644,11 @@ header .header--nav .header--nav--ul .dropdown a .window--icon {
   background: rgb(132, 243, 183);
 }
 .content--container:nth-of-type(4) .text--illustration--container .content--text--container .content--link {
-  background: rgb(73, 110, 253);
+  background: #3F65FD;
   color: #fff;
 }
 .content--container:nth-of-type(4) .content--testimonial--container {
-  background: rgb(73, 110, 253);
+  background: #3F65FD;
   color: #fff;
 }
 .content--container .text--illustration--container .content--text--container .content--heading {
@@ -812,7 +812,7 @@ header .header--nav .header--nav--ul .dropdown a .window--icon {
     background: rgb(132, 243, 183);
   }
   .content--container:nth-of-type(4) .text--illustration--container .content--text--container .content--link {
-    background: rgb(73, 110, 253);
+    background: #3F65FD;
     color: #fff;
     transition: 0.2s;
   }
@@ -821,7 +821,7 @@ header .header--nav .header--nav--ul .dropdown a .window--icon {
     transition: 0.2s;
   }
   .content--container:nth-of-type(4) .content--testimonial--container {
-    background: rgb(73, 110, 253);
+    background: #3F65FD;
     color: #fff;
   }
   .content--container .text--illustration--container {
